# Autonomous-ML-Agent

./: .dockerhub-ready  .dockerignore  .gitignore  DEMO_GUIDE.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  demo.sh  docker-compose.yml  env.example  pyproject.toml  pytest.ini  quick_check.sh  requirements-ci.txt  requirements-dev.txt  requirements-docker.txt  requirements-fast.txt  requirements-test.txt  requirements.txt  start_demo.sh  test_load_metrics.json  test_metrics.json
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: default.yaml  verify.yaml
docker/: Dockerfile  Dockerfile.fast  Dockerfile.optimized  Dockerfile.simple  docker-compose.yml
docs/: DOCKER_OPTIMIZATION.md
scripts/: build-prod.sh  build.sh  verify_local.sh
src/aml_agent/: __init__.py  config.py  logging.py  types.py  utils.py
src/aml_agent/agent/: __init__.py  budget.py  loop.py  planner.py
src/aml_agent/export/: __init__.py  artifact.py  model_card.py
src/aml_agent/interpret/: __init__.py  explain.py  importance.py
src/aml_agent/meta/: __init__.py  store.py  warmstart.py
src/aml_agent/models/: __init__.py  ensemble.py  registries.py  spaces.py  train_eval.py
src/aml_agent/monitoring/: __init__.py  metrics.py
src/aml_agent/preprocess/: __init__.py  advanced_transformers.py  detectors.py  pipeline.py  transformers.py
src/aml_agent/security/: __init__.py  auth.py
src/aml_agent/service/: __init__.py  app.py  schemas.py
src/aml_agent/ui/: __init__.py  cli.py  leaderboard.py  web.py
tests/: __init__.py  conftest.py  test_integration.py  test_monitoring.py  test_preprocess.py  test_smoke.py  test_training.py
