[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ml-agent"
version = "0.1.0"
description = "Autonomous ML agent for tabular data with LLM-guided hyperparameter optimization"
authors = [{name = "AML Agent Team", email = "team@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "optuna>=3.0.0",
    "joblib>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "rich>=13.0.0",
    "plotly>=5.15.0",
    "shap>=0.42.0",
    "eli5>=0.13.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.5.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.3.0"]

[project.scripts]
aml = "aml_agent.ui.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore::DeprecationWarning:sklearn.utils._tags",
    "ignore:.*CatBoostClassifier.*__sklearn_tags__.*:DeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

